--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"dev": "nodemon server.js",
-	"json:server": "json-server --watch db.json"
+    "dev": "nodemon server.js",
+    "json:server": "json-server --watch db.json"
   },
   "author": "Nghi Nguyen",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "json-server": "^0.12.1",
     "lodash": "^4.17.5",
+    "mongoose": "^5.0.11",
     "nodemon": "^1.17.2"
   }
 }
