--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.11",
+    "apollo-client": "^2.2.7",
+    "apollo-link": "^1.2.1",
+    "apollo-link-context": "^1.0.7",
+    "apollo-link-http": "^1.5.3",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "semantic-ui": "^2.3.0",
     "vue": "^2.5.2",
+    "vue-apollo": "^3.0.0-alpha.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
