--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "apollo-link": "^1.2.1",
     "apollo-link-context": "^1.0.7",
     "apollo-link-http": "^1.5.3",
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
