--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "Nghi Nguyen",
   "license": "ISC",
   "dependencies": {
+    "apollo-upload-server": "^5.0.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
@@ -20,6 +22,8 @@
     "json-server": "^0.12.1",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.11",
-    "nodemon": "^1.17.2"
+    "multer": "^1.3.0",
+    "nodemon": "^1.17.2",
+    "sightengine": "^1.2.1"
   }
 }
