--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.0.11",
     "multer": "^1.3.0",
     "nodemon": "^1.17.2",
+    "npm": "^5.8.0",
     "sightengine": "^1.2.1"
   }
 }
